--- a/HouseholdBudgeter/HouseholdBudgeter.csproj
+++ b/HouseholdBudgeter/HouseholdBudgeter.csproj
@@ -249,6 +249,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AccountUserHelper.cs" />
     <Compile Include="Helpers\AuthorizeHouseholdRequired.cs" />
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\HouseholdHelper.cs" />
