--- a/HouseholdBudgeter/apiapp.json
+++ b/HouseholdBudgeter/apiapp.json
@@ -7,5 +7,8 @@
   "title": "HouseholdBudgeter",
   "summary": "",
   "author": "",
-  "endpoints": null
+  "endpoints": {
+    "apiDefinition": "/swagger/docs/v1",
+    "status": null
+  }
 }
